--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>dagre-d3</artifactId>
-    <version>0.2.9</version>
+    <version>0.2.9-SNAPSHOT</version>
     <name>dagre-d3</name>
     <description>WebJar for dagre-d3</description>
     <url>http://webjars.org</url>
@@ -19,9 +19,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <upstream.version>0.2.9</upstream.version>
-        <upstream.url>https://raw.githubusercontent.com/teamdf/jquery-number/${upstream.version}</upstream.url>
-        <upstream.url>http://cpettitt.github.io/project/dagre-d3/latest/</upstream.url>
-        <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${upstream.version}</destDir>
+        <upstream.url>http://cpettitt.github.io/project/dagre-d3/${upstream.version}</upstream.url>
+        <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${project.version}</destDir>
         <requirejs>
             {
                 "paths": {
