--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <upstream.version>0.2.9</upstream.version>
-        <upstream.url>http://cpettitt.github.io/project/dagre-d3/${upstream.version}</upstream.url>
+        <upstream.url>https://github.com/cpettitt/dagre-d3-bower/archive/v${upstream.version}.zip</upstream.url>
         <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${project.version}</destDir>
         <requirejs>
             {
@@ -66,7 +66,7 @@
 
     <build>
         <plugins>
-            <plugin>
+                <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <version>1.7</version>
@@ -76,9 +76,14 @@
                         <goals><goal>run</goal></goals>
                         <configuration>
                             <target>
-                                <mkdir dir="${destDir}" />
-                                <get src="${upstream.url}/dagre-d3.js" dest="${destDir}" />
-                                <get src="${upstream.url}/dagre-d3.min.js" dest="${destDir}" />
+                                <echo message="download archive" />
+                                <get src="${upstream.url}" dest="${project.build.directory}/${project.artifactId}-bower.zip" />
+                                <echo message="unzip archive" />
+                                <unzip src="${project.build.directory}/${project.artifactId}-bower.zip" dest="${project.build.directory}" />
+                                <echo message="moving resources" />
+                                <move todir="${destDir}">
+                                    <fileset dir="${project.build.directory}/dagre-d3-bower-${upstream.version}/js" />
+                                </move>
                             </target>
                         </configuration>
                     </execution>
