--- a/pom.xml
+++ b/pom.xml
@@ -11,15 +11,15 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>dagre-d3</artifactId>
-    <version>0.2.10-SNAPSHOT</version>
+    <version>0.3.2-SNAPSHOT</version>
     <name>dagre-d3</name>
     <description>WebJar for dagre-d3</description>
     <url>http://webjars.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <upstream.version>0.2.9</upstream.version>
-        <upstream.url>https://github.com/cpettitt/dagre-d3-bower/archive/v${upstream.version}.zip</upstream.url>
+        <upstream.version>0.3.2</upstream.version>
+        <upstream.url>https://github.com/cpettitt/dagre-d3/archive/v${upstream.version}.zip</upstream.url>
         <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${project.version}</destDir>
         <requirejs>
             {
@@ -77,12 +77,12 @@
                         <configuration>
                             <target>
                                 <echo message="download archive" />
-                                <get src="${upstream.url}" dest="${project.build.directory}/${project.artifactId}-bower.zip" />
+                                <get src="${upstream.url}" dest="${project.build.directory}/${project.artifactId}.zip" />
                                 <echo message="unzip archive" />
-                                <unzip src="${project.build.directory}/${project.artifactId}-bower.zip" dest="${project.build.directory}" />
+                                <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
                                 <echo message="moving resources" />
                                 <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/dagre-d3-bower-${upstream.version}/js" />
+                                    <fileset dir="${project.build.directory}/dagre-d3-${upstream.version}/dist" />
                                 </move>
                             </target>
                         </configuration>
