--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>dagre-d3</artifactId>
-    <version>0.4.10-SNAPSHOT</version>
+    <version>0.4.10</version>
     <name>dagre-d3</name>
     <description>WebJar for dagre-d3</description>
     <url>http://webjars.org</url>
@@ -53,7 +53,7 @@
         <url>http://github.com/webjars/dagre-d3</url>
         <connection>scm:git:https://github.com/webjars/dagre-d3.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/dagre-d3.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>dagre-d3-0.4.10</tag>
     </scm>
 
     <dependencies>
@@ -76,13 +76,13 @@
                         <goals><goal>run</goal></goals>
                         <configuration>
                             <target>
-                                <echo message="download archive"/>
-                                <get src="${upstream.url}" dest="${project.build.directory}/${project.artifactId}.zip"/>
-                                <echo message="unzip archive"/>
-                                <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}"/>
-                                <echo message="moving resources"/>
+                                <echo message="download archive" />
+                                <get src="${upstream.url}" dest="${project.build.directory}/${project.artifactId}.zip" />
+                                <echo message="unzip archive" />
+                                <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
+                                <echo message="moving resources" />
                                 <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/dagre-d3-${upstream.version}/dist"/>
+                                    <fileset dir="${project.build.directory}/dagre-d3-${upstream.version}/dist" />
                                 </move>
                             </target>
                         </configuration>
